# tauri-plugin-camera

./: .gitignore  Cargo.toml  README.md  build.rs  package.json
android/: .gitignore  build.gradle.kts  local.properties
android/androidTest/java/: ExampleInstrumentedTest.kt
android/src/main/: AndroidManifest.xml
android/src/main/java/: CameraActivity.kt  CameraHandler.kt  CameraPlugin.kt  Example.kt  ExamplePlugin.kt
android/src/test/java/: ExampleUnitTest.kt
examples/camera-app/: .gitignore  angular.json  package.json  tsconfig.json
examples/camera-app/src/: index.html
examples/camera-app/src-tauri/: tauri.conf.json
examples/camera-app/src-tauri/capabilities/: default.json
examples/camera-app/src-tauri/src/: lib.rs  main.rs
examples/camera-app/src/app/: app.component.html  app.component.spec.ts  app.component.ts
examples/camera-example-app/: README.md  index.html  jsconfig.json  package.json  vite.config.js
examples/camera-example-app/src/: App.svelte  main.js  style.css
examples/camera-example-app/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
examples/camera-example-app/src-tauri/capabilities/: default.json
examples/camera-example-app/src-tauri/src/: lib.rs
examples/tauri-app/: package.json
examples/tauri-app/src/: App.svelte
examples/tauri-app/src-tauri/: Cargo.toml
guest-js/: index.ts
ios/: Package.swift
ios/Sources/: ExamplePlugin.swift
permissions/autogenerated/: reference.md
permissions/schemas/: schema.json
src/: commands.rs  desktop.rs  error.rs  lib.rs  mobile.rs  models.rs
(+5 files in other folders)
