[package]
name = "camera-example-app"
version = "0.1.0"
description = "A Tauri App utilizing the camera plugin"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "camera_example_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.5", default-features = false , features = [] }

[dependencies]
tauri = { version = "2.3.1", features = [] }
tauri-plugin-camera = { path = "../../../" }
